Fixed bug 224964: Provide support for Proxy Authentication through JPA. It provides support for Oracle PA using openProxySession (both JPA and core) in all cases (including ExclusiveIsolatedClientSession); Adds JPA property for specifying ExclusiveIsolatedClientSession (at least one descriptor must be isolated); Cleans up PropertiesHandler; EntityManagerProperties reuses names defined in PersistenceUnitPrioperties; Modifies uow to allow to instantiate ValueHolder when dead; Uow always released when em.close called (unless there's active transaction - then it released when transaction is completed); RepeatbleWriteUow.release method releases change sets but not the cache. Usage of ExclusiveIsolatedClientSession should not cause connection leakage (provided that in JTA case the session is released by the user (core case) or em is closed (jpa case); Modified ExclusiveIsolatedClientSession not to through exception in case it instatiates ValueHolder for Isolated class while already been released - instead the new connection will be acquired and kept just for > the duration of the query; Modified emSetupImpl so that listener passed to createEMF is actually used; Partially fixed partially worked around "java.lang.OutOfMemoryError: PermGen space" error that shows up in case of open/close the same factory many times, see the big comment in EntityManagerSetupImpl.predeploy method. Removes the old code that supported openProxySession - based ProxyAuthentication, but the old code for OCI-based PA is kept (it's not covered by the new code). Tests: jpa: FullRegressionTestSuite -> ProxyAuthenticationTestSuite core:  OracleModel -> ProxyAuthenticationCustomizerTestModel